// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    class="pf-v6-c-tile pf-m-disabled"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders selected 1`] = `
<DocumentFragment>
  <div
    aria-selected="true"
    class="pf-v6-c-tile pf-m-selected"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with stacked icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header pf-m-stacked"
    >
      <div
        class="pf-v6-c-tile__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with stacked large icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile pf-m-display-lg"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header pf-m-stacked"
    >
      <div
        class="pf-v6-c-tile__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tile renders with subtext 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-tile"
    role="option"
    tabindex="0"
  >
    <div
      class="pf-v6-c-tile__header"
    >
      <div
        class="pf-v6-c-tile__title"
      >
        test
      </div>
    </div>
    <div
      class="pf-v6-c-tile__body"
    >
      test subtext
    </div>
  </div>
</DocumentFragment>
`;
